# near-oracle-contracts

./: .gitignore  Cargo.toml  DEPLOY.md  README.md  borsh.js  package.json  testnet-deploy.sh
contract/: Cargo.toml  build.bat  build.sh
contract-nft/: Cargo.toml  README.md  build.sh  dev.md  methods.md
contract-nft/src/: approval.rs  enumerate.rs  events.rs  internal.rs  lib.rs  metadata.rs  mint.rs  nft_core.rs  royalty.rs  test_utils.rs  tests.rs  whitelist.rs
contract-storescore/: Cargo.toml  README.md  build.bat  build.sh  dev.md  methods.md
contract-storescore/res/: near_oracle.wasm
contract-storescore/src/: lib.rs  playground.rs  whitelist.rs
contract/res/: main.wasm  my_crossword.wasm  near_oracle.wasm
contract/src/: lib.rs
nft-contract/: Cargo.toml  README.md
nft-contract/src/: approval.rs  enumeration.rs  internal.rs  lib.rs  metadata.rs  mint.rs  nft_core.rs
res/: my_crossword.wasm
src/: config.js  index.js  lib.rs  near-cli-command.js
