[package]
name = "nftmint"
version = "0.1.0"
authors = ["Irene Fabris <irene@balloonbox.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0"
serde_json = "1.0"
uint = "0.8"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
