[package]
name = "near_oracle"
version = "0.1.0"
authors = ["Irene Fabris <irene@balloonbox.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"] # consider adding "rlib" to your crate-type list

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
near-sdk = "4.0.0-pre.4"
hex = "0.4.3"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"  # <-- aggressively optimize for size. Replace 'z' with 's' to optimize for speed instead
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = []